# littleopa-qr

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: webpack.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: ColorPicker.tsx  ContentTypeSelector.tsx  DesignPanel.tsx  DownloadButtons.tsx  DynamicQRForm.tsx  GradientPicker.tsx  Header.tsx  HistoryPanel.tsx  ImportExportSettings.tsx  Layout.tsx  LogoUploader.tsx  QRPreview.tsx  QualityPanel.tsx  Section.tsx  ShapeSelector.tsx  TemplatePicker.tsx
src/components/forms/: AppStoreForm.tsx  CryptoForm.tsx  EmailForm.tsx  EventForm.tsx  FileLinkForm.tsx  FormControls.tsx  GeoForm.tsx  MultiLinkForm.tsx  PaymentForm.tsx  PhoneForm.tsx  SmsForm.tsx  SocialForm.tsx  TextForm.tsx  UrlForm.tsx  VCardForm.tsx  WhatsappForm.tsx  WifiForm.tsx  formTypes.ts
src/data/: contentTypeIcons.ts  contentTypes.ts  defaults.ts  examples.ts  socialPlatforms.ts  templates.ts
src/utils/: export.ts  qrBuilders.ts  qrOptions.ts  qrStyleExtension.ts  quality.ts  random.ts  shapeStyles.ts  storage.ts  typeIcon.ts
