[package]
name = "littleopa-qr"
version = "1.0.0"
description = "Desktop wrapper for the LittleOPA QR code generator"
authors = ["Phillipxh"]
license = "MIT"
repository = "https://github.com/Phillipxh/littleopa-qr"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
